@@ -1,7 +1,6 @@
 package ch.sbb.atlas.versioning.service;
 
 import static java.util.Comparator.comparing;
-import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import ch.sbb.atlas.versioning.BaseTest.VersionableObject.Relation;
@@ -52,9 +51,9 @@ public class VersionableServiceScenario1Test extends VersionableServiceBaseTest 
 
     //then
     assertThat(result).isNotNull();
-    assertThat(result.size()).isEqualTo(2);
+    assertThat(result).hasSize(2);
     List<VersionedObject> sortedVersionedObjects =
-        result.stream().sorted(comparing(VersionedObject::getValidFrom)).collect(toList());
+        result.stream().sorted(comparing(VersionedObject::getValidFrom)).toList();
 
     //first version
     assertThat(sortedVersionedObjects.get(0)).isNotNull();
@@ -70,7 +69,7 @@ public class VersionableServiceScenario1Test extends VersionableServiceBaseTest 
     assertThat(entityToChange.getId()).isEqualTo(versionableObject2.getId());
     assertThat(entityToChange.getProperties()).isNotEmpty();
     List<Property> propertiesResult = entityToChange.getProperties();
-    assertThat(propertiesResult.size()).isEqualTo(4);
+    assertThat(propertiesResult).hasSize(4);
     Property property1Result = propertiesResult.stream()
         .filter(
             property -> VersionableObject.Fields.property.equals(
@@ -92,12 +91,12 @@ public class VersionableServiceScenario1Test extends VersionableServiceBaseTest 
     assertThat(property2Result.hasOneToManyRelation()).isTrue();
     List<Entity> oneToManyRelation = property2Result.getOneToMany();
     assertThat(oneToManyRelation).isNotEmpty();
-    assertThat(oneToManyRelation.size()).isEqualTo(1);
+    assertThat(oneToManyRelation).hasSize(1);
     Entity entityRelation = oneToManyRelation.get(0);
     assertThat(entityRelation).isNotNull();
     List<Property> entityRelationProperties = entityRelation.getProperties();
     assertThat(entityRelationProperties).isNotEmpty();
-    assertThat(entityRelationProperties.size()).isEqualTo(1);
+    assertThat(entityRelationProperties).hasSize(1);
     Property entityRelationProperty = entityRelationProperties.get(0);
     assertThat(entityRelationProperty).isNotNull();
     assertThat(entityRelationProperty.getKey()).isEqualTo(Relation.Fields.value);
@@ -143,9 +142,9 @@ public class VersionableServiceScenario1Test extends VersionableServiceBaseTest 
     //then
 
     assertThat(result).isNotNull();
-    assertThat(result.size()).isEqualTo(2);
+    assertThat(result).hasSize(2);
     List<VersionedObject> sortedVersionedObjects =
-        result.stream().sorted(comparing(VersionedObject::getValidFrom)).collect(toList());
+        result.stream().sorted(comparing(VersionedObject::getValidFrom)).toList();
     assertThat(sortedVersionedObjects.get(0)).isNotNull();
 
     //first version
@@ -161,7 +160,7 @@ public class VersionableServiceScenario1Test extends VersionableServiceBaseTest 
     assertThat(entityToChange.getId()).isEqualTo(versionableObject2.getId());
     assertThat(entityToChange.getProperties()).isNotEmpty();
     List<Property> propertiesResult = entityToChange.getProperties();
-    assertThat(propertiesResult.size()).isEqualTo(4);
+    assertThat(propertiesResult).hasSize(4);
     Property property1Result = propertiesResult.stream()
         .filter(
             property -> VersionableObject.Fields.property.equals(
@@ -183,12 +182,12 @@ public class VersionableServiceScenario1Test extends VersionableServiceBaseTest 
     assertThat(property2Result.hasOneToManyRelation()).isTrue();
     List<Entity> oneToManyRelation = property2Result.getOneToMany();
     assertThat(oneToManyRelation).isNotEmpty();
-    assertThat(oneToManyRelation.size()).isEqualTo(1);
+    assertThat(oneToManyRelation).hasSize(1);
     Entity entityRelation = oneToManyRelation.get(0);
     assertThat(entityRelation).isNotNull();
     List<Property> entityRelationProperties = entityRelation.getProperties();
     assertThat(entityRelationProperties).isNotEmpty();
-    assertThat(entityRelationProperties.size()).isEqualTo(1);
+    assertThat(entityRelationProperties).hasSize(1);
     Property entityRelationProperty = entityRelationProperties.get(0);
     assertThat(entityRelationProperty).isNotNull();
     assertThat(entityRelationProperty.getKey()).isEqualTo(Relation.Fields.value);
@@ -218,9 +217,9 @@ public class VersionableServiceScenario1Test extends VersionableServiceBaseTest 
 
     //then
     assertThat(result).isNotNull();
-    assertThat(result.size()).isEqualTo(3);
+    assertThat(result).hasSize(3);
     List<VersionedObject> sortedVersionedObjects =
-        result.stream().sorted(comparing(VersionedObject::getValidFrom)).collect(toList());
+        result.stream().sorted(comparing(VersionedObject::getValidFrom)).toList();
 
     //first version
     VersionedObject firstVersionedObject = sortedVersionedObjects.get(0);
@@ -234,7 +233,7 @@ public class VersionableServiceScenario1Test extends VersionableServiceBaseTest 
     Entity entityToChange = versionedObject.getEntity();
     assertThat(entityToChange).isNotNull();
     assertThat(entityToChange.getId()).isEqualTo(versionableObject2.getId());
-    assertThat(entityToChange.getProperties().size()).isEqualTo(4);
+    assertThat(entityToChange.getProperties()).hasSize(4);
     Property propertyOneToManyRelation = entityToChange.getProperties()
         .stream()
         .filter(
@@ -286,9 +285,9 @@ public class VersionableServiceScenario1Test extends VersionableServiceBaseTest 
 
     //then
     assertThat(result).isNotNull();
-    assertThat(result.size()).isEqualTo(3);
+    assertThat(result).hasSize(3);
     List<VersionedObject> sortedVersionedObjects =
-        result.stream().sorted(comparing(VersionedObject::getValidFrom)).collect(toList());
+        result.stream().sorted(comparing(VersionedObject::getValidFrom)).toList();
 
     assertThat(sortedVersionedObjects.get(0)).isNotNull();
     VersionedObject versionedObject = sortedVersionedObjects.get(0);
@@ -296,7 +295,7 @@ public class VersionableServiceScenario1Test extends VersionableServiceBaseTest 
     assertThat(versionedObject.getValidFrom()).isEqualTo(versionableObject1.getValidFrom());
     assertThat(versionedObject.getValidTo()).isEqualTo(versionableObject1.getValidTo());
     Entity entityToChange = versionedObject.getEntity();
-    assertThat(entityToChange.getProperties().size()).isEqualTo(4);
+    assertThat(entityToChange.getProperties()).hasSize(4);
     Property propertyOneToManyRelation = entityToChange.getProperties()
         .stream()
         .filter(
