@@ -1,7 +1,6 @@
 package ch.sbb.atlas.versioning.service;
 
 import static java.util.Comparator.comparing;
-import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import ch.sbb.atlas.versioning.BaseTest.VersionableObject.Relation;
@@ -45,9 +44,9 @@ public class VersionableServiceScenario2Test extends VersionableServiceBaseTest 
 
     //then
     assertThat(result).isNotNull();
-    assertThat(result.size()).isEqualTo(5);
+    assertThat(result).hasSize(5);
     List<VersionedObject> sortedVersionedObjects =
-        result.stream().sorted(comparing(VersionedObject::getValidFrom)).collect(toList());
+        result.stream().sorted(comparing(VersionedObject::getValidFrom)).toList();
 
     VersionedObject firstVersionedObject = sortedVersionedObjects.get(0);
     assertThat(firstVersionedObject.getAction()).isEqualTo(VersioningAction.NOT_TOUCHED);
@@ -63,7 +62,7 @@ public class VersionableServiceScenario2Test extends VersionableServiceBaseTest 
     assertThat(secondVersionedObject.getValidTo()).isEqualTo(editedValidFrom.minusDays(1));
     Entity secondVersionedObjectEntity = secondVersionedObject.getEntity();
     assertThat(secondVersionedObjectEntity).isNotNull();
-    assertThat(secondVersionedObjectEntity.getProperties().size()).isEqualTo(4);
+    assertThat(secondVersionedObjectEntity.getProperties()).hasSize(4);
     Property propertySecondVersionedObjectEntity = filterProperty(
         secondVersionedObjectEntity.getProperties(), VersionableObject.Fields.property);
     assertThat(propertySecondVersionedObjectEntity).isNotNull();
@@ -80,7 +79,7 @@ public class VersionableServiceScenario2Test extends VersionableServiceBaseTest 
     assertThat(thirdVersionedObject.getValidTo()).isEqualTo(editedValidTo);
     Entity thirdVersionedObjectEntity = thirdVersionedObject.getEntity();
     assertThat(thirdVersionedObjectEntity).isNotNull();
-    assertThat(thirdVersionedObjectEntity.getProperties().size()).isEqualTo(4);
+    assertThat(thirdVersionedObjectEntity.getProperties()).hasSize(4);
     Property propertyThirdVersionedObjectEntity = filterProperty(
         thirdVersionedObjectEntity.getProperties(), VersionableObject.Fields.property);
     assertThat(propertyThirdVersionedObjectEntity).isNotNull();
@@ -90,11 +89,11 @@ public class VersionableServiceScenario2Test extends VersionableServiceBaseTest 
     assertThat(oneToManyRelationThirdVersionedObjectEntity.hasOneToManyRelation()).isTrue();
     List<Entity> oneToManyRelationEntitiesThirdVersionedObjectEntity = oneToManyRelationThirdVersionedObjectEntity.getOneToMany();
     assertThat(oneToManyRelationEntitiesThirdVersionedObjectEntity).isNotEmpty();
-    assertThat(oneToManyRelationEntitiesThirdVersionedObjectEntity.size()).isEqualTo(1);
+    assertThat(oneToManyRelationEntitiesThirdVersionedObjectEntity).hasSize(1);
     Entity lineRelationThirdVersionedObject = oneToManyRelationEntitiesThirdVersionedObjectEntity.get(
         0);
     assertThat(lineRelationThirdVersionedObject.getProperties()).isNotEmpty();
-    assertThat(lineRelationThirdVersionedObject.getProperties().size()).isEqualTo(1);
+    assertThat(lineRelationThirdVersionedObject.getProperties()).hasSize(1);
     assertThat(lineRelationThirdVersionedObject.getProperties().get(0).getValue()).isEqualTo(
         "first Relation");
 
@@ -105,7 +104,7 @@ public class VersionableServiceScenario2Test extends VersionableServiceBaseTest 
     assertThat(fourthVersionedObject.getValidTo()).isEqualTo(versionableObject2.getValidTo());
     Entity fourthVersionedObjectEntity = firstVersionedObject.getEntity();
     assertThat(fourthVersionedObjectEntity).isNotNull();
-    assertThat(fourthVersionedObjectEntity.getProperties().size()).isEqualTo(4);
+    assertThat(fourthVersionedObjectEntity.getProperties()).hasSize(4);
     Property propertyFourthVersionedObjectEntity = filterProperty(
         fourthVersionedObjectEntity.getProperties(), VersionableObject.Fields.property);
     assertThat(propertyFourthVersionedObjectEntity).isNotNull();
@@ -154,9 +153,9 @@ public class VersionableServiceScenario2Test extends VersionableServiceBaseTest 
 
     //then
     assertThat(result).isNotNull();
-    assertThat(result.size()).isEqualTo(5);
+    assertThat(result).hasSize(5);
     List<VersionedObject> sortedVersionedObjects =
-        result.stream().sorted(comparing(VersionedObject::getValidFrom)).collect(toList());
+        result.stream().sorted(comparing(VersionedObject::getValidFrom)).toList();
 
     VersionedObject firstVersionedObject = sortedVersionedObjects.get(0);
     assertThat(firstVersionedObject.getAction()).isEqualTo(VersioningAction.NOT_TOUCHED);
@@ -172,7 +171,7 @@ public class VersionableServiceScenario2Test extends VersionableServiceBaseTest 
     assertThat(secondVersionedObject.getValidTo()).isEqualTo(editedValidFrom.minusDays(1));
     Entity secondVersionedObjectEntity = secondVersionedObject.getEntity();
     assertThat(secondVersionedObjectEntity).isNotNull();
-    assertThat(secondVersionedObjectEntity.getProperties().size()).isEqualTo(4);
+    assertThat(secondVersionedObjectEntity.getProperties()).hasSize(4);
     Property propertySecondVersionedObjectEntity = filterProperty(
         secondVersionedObjectEntity.getProperties(), VersionableObject.Fields.property);
     assertThat(propertySecondVersionedObjectEntity).isNotNull();
@@ -189,7 +188,7 @@ public class VersionableServiceScenario2Test extends VersionableServiceBaseTest 
     assertThat(thirdVersionedObject.getValidTo()).isEqualTo(editedValidTo);
     Entity thirdVersionedObjectEntity = thirdVersionedObject.getEntity();
     assertThat(thirdVersionedObjectEntity).isNotNull();
-    assertThat(thirdVersionedObjectEntity.getProperties().size()).isEqualTo(4);
+    assertThat(thirdVersionedObjectEntity.getProperties()).hasSize(4);
     Property propertyThirdVersionedObjectEntity = filterProperty(
         thirdVersionedObjectEntity.getProperties(), VersionableObject.Fields.property);
     assertThat(propertyThirdVersionedObjectEntity).isNotNull();
@@ -199,11 +198,11 @@ public class VersionableServiceScenario2Test extends VersionableServiceBaseTest 
     assertThat(oneToManyRelationThirdVersionedObjectEntity.hasOneToManyRelation()).isTrue();
     List<Entity> oneToManyRelationEntitiesThirdVersionedObjectEntity = oneToManyRelationThirdVersionedObjectEntity.getOneToMany();
     assertThat(oneToManyRelationEntitiesThirdVersionedObjectEntity).isNotEmpty();
-    assertThat(oneToManyRelationEntitiesThirdVersionedObjectEntity.size()).isEqualTo(1);
+    assertThat(oneToManyRelationEntitiesThirdVersionedObjectEntity).hasSize(1);
     Entity lineRelationThirdVersionedObject = oneToManyRelationEntitiesThirdVersionedObjectEntity.get(
         0);
     assertThat(lineRelationThirdVersionedObject.getProperties()).isNotEmpty();
-    assertThat(lineRelationThirdVersionedObject.getProperties().size()).isEqualTo(1);
+    assertThat(lineRelationThirdVersionedObject.getProperties()).hasSize(1);
     assertThat(lineRelationThirdVersionedObject.getProperties().get(0).getValue()).isEqualTo(
         "first Relation");
 
@@ -214,7 +213,7 @@ public class VersionableServiceScenario2Test extends VersionableServiceBaseTest 
     assertThat(fourthVersionedObject.getValidTo()).isEqualTo(versionableObject2.getValidTo());
     Entity fourthVersionedObjectEntity = firstVersionedObject.getEntity();
     assertThat(fourthVersionedObjectEntity).isNotNull();
-    assertThat(fourthVersionedObjectEntity.getProperties().size()).isEqualTo(4);
+    assertThat(fourthVersionedObjectEntity.getProperties()).hasSize(4);
     Property propertyFourthVersionedObjectEntity = filterProperty(
         fourthVersionedObjectEntity.getProperties(), VersionableObject.Fields.property);
     assertThat(propertyFourthVersionedObjectEntity).isNotNull();
